sure/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sure-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sure-web
  template:
    metadata:
      labels:
        app: sure-web
    spec:
      containers:
        - name: sure
          image: ghcr.io/we-promise/sure:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /rails/storage
              name: sure-storage
      volumes:
        - name: sure-storage
          persistentVolumeClaim:
            claimName: sure-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sure-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sure-worker
  template:
    metadata:
      labels:
        app: sure-worker
    spec:
      containers:
        - name: sure-worker
          image: ghcr.io/we-promise/sure:latest
          command: ["bundle", "exec", "sidekiq"]
          volumeMounts:
            - mountPath: /rails/storage
              name: sure-storage
      volumes:
        - name: sure-storage
          persistentVolumeClaim:
            claimName: sure-pvc
