sure/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sure-service
spec:
  selector:
    app: sure-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
